crud user + switch user + csrf + remember me + form_login provider + login private provider + notifcation + sign in with microsoft 👌👌👌😊

--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -1,105 +1,80 @@
 <!DOCTYPE html>
+
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<link rel="apple-touch-icon" sizes="76x76" href="{{ asset('img/apple-icon.png') }}">
-		<link rel="icon" type="image/png" href="{{ asset('img/favicon.png') }}">
+		<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+		<link href="{{ asset('img/apple-icon.png') }}" rel="apple-touch-icon" sizes="76x76"/>
+		<link href="{{ asset('img/favicon.png') }}" rel="icon" type="image/png"/>
 		<title>
 			Argon Dashboard 2 by Creative Tim
 		</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 		<!--     Fonts and icons     -->
 		<link
-		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"/>
+		href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 		<!-- Nucleo Icons -->
-		<link href="{{ asset('css/nucleo-icons.css') }}" rel="stylesheet"/>
+		<link href="{{ asset('css/nucleo-icons.css') }}" rel="stylesheet">
 		<link
 		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
 		<!-- Font Awesome Icons -->
-		<script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+		<script crossorigin="anonymous" src="https://kit.fontawesome.com/42d5adcbca.js"></script>
 		<link
 		href="{{ asset('css/nucleo-svg.css') }}" rel="stylesheet"/>
 		<!-- CSS Files -->
-		<link id="pagestyle" href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" rel="stylesheet"/>
-	</head>
-	<body class="g-sidenav-show bg-gray-100"> {% block backContent %}{% endblock %}
-		<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main" data-color="danger">
-			<div class="sidenav-header">
-				<i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-				<a class="navbar-brand m-0" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">
-					<img src="{{ asset('img/Logo.png') }}" class="navbar-brand-img h-100" alt="main_logo">
-					<span class="ms-1 font-weight-bold">Rakcha</span>
-				</a>
+		<link href="{{ asset('css/argon-dashboard.css?v=2.0.4') }}" id="pagestyle" rel="stylesheet"/></head>
+</html></link></link></head><body class="g-sidenav-show bg-gray-100"> {% block backContent %}{% endblock %}<aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4" data-color="danger" id="sidenav-main"><div class="sidenav-header">
+<i aria-hidden="true" class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" id="iconSidenav"></i>
+<a class="navbar-brand m-0" href=" https://demos.creative-tim.com/argon-dashboard/pages/dashboard.html " target="_blank">
+	<img alt="main_logo" class="navbar-brand-img h-100" src="{{ asset('img/Logo.png') }}"/>
+	<span class="ms-1 font-weight-bold">Rakcha</span>
+</a></div><hr class="horizontal dark mt-0"/><div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
+<ul class="navbar-nav">
+	{% for item in ['users', 'profile', 'logout'] %}
+		<li class="nav-item">
+			<a class="nav-link {% if item == 'billing' %}active{% endif %}" href="{{path('app_' ~ item ~ '_index')}}">
+				<div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+					{% set iconClass %}
+					{% if item == 'users' %}
+						ni-world-2 text-danger
+					{% elseif item == 'profile' %}
+						ni-single-02 text-dark
+					{% endif %}
+					{% endset %}
+					<i class="ni {{ iconClass }} text-sm opacity-10"></i>
+				</div>
+				<span class="nav-link-text ms-1">{{ item|capitalize|auto_translate }}</span>
+			</a>
+		</li>
+	{% endfor %}
+
+</ul></div></aside>{% block body %}{% block footer %}
+<footer class="footer pt-3">
+	<div class="container-fluid">
+		<div class="row align-items-center justify-content-lg-between">
+			<div class="col-lg-6 mb-lg-0 mb-4">
+				<div class="copyright text-center text-sm text-muted text-lg-start">
+					©
+					<script>
+						document.write(new Date().getFullYear())
+					</script>,
+																																															made with
+					<i class="fa fa-heart"></i>
+					by
+					<a class="font-weight-bold" href="https://www.creative-tim.com" target="_blank">Creative Tim</a>
+					for a better web.
+				</div>
 			</div>
-			<hr class="horizontal dark mt-0">
-			<div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
-				<ul class="navbar-nav">
-					{% for item in ['dashboard', 'tables','cinema', 'billing', 'virtual-reality', 'rtl', 'profile', 'sign-in', 'sign-up'] %}
+			<div class="col-lg-6">
+				<ul class="nav nav-footer justify-content-center justify-content-lg-end">
+					{% for item in ['Creative Tim', 'About Us', 'Blog', 'License'] %}
 						<li class="nav-item">
-							<a class="nav-link {% if item == 'billing' %}active{% endif %}" href="../pages/{{ item }}.html.twig">
-								<div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-									{% set iconClass %}
-									{% if item == 'dashboard' %}
-										ni-tv-2 text-danger
-									{% elseif item == 'tables' %}
-										ni-calendar-grid-58 text-warning
-									{% elseif item == 'billing' %}
-										ni-credit-card text-success
-									{% elseif item == 'cinema' %}
-										ni-credit-card text-success
-									{% elseif item == 'virtual-reality' %}
-										ni-app text-info
-									{% elseif item == 'rtl' %}
-										ni-world-2 text-danger
-									{% elseif item == 'profile' %}
-										ni-single-02 text-dark
-									{% elseif item == 'sign-in' %}
-										ni-single-copy-04 text-warning
-									{% elseif item == 'sign-up' %}
-										ni-collection text-info
-									{% endif %}
-									{% endset %}
-									<i class="ni {{ iconClass }} text-sm opacity-10"></i>
-								</div>
-								<span class="nav-link-text ms-1">{{ item|capitalize }}</span>
-							</a>
+							<a class="nav-link text-muted" href="https://www.creative-tim.com" target="_blank">{{ item }}</a>
 						</li>
 					{% endfor %}
 				</ul>
 			</div>
-		</aside>
-
-		{% block body %}
-			{% block footer %}
-				<footer class="footer pt-3  ">
-					<div class="container-fluid">
-						<div class="row align-items-center justify-content-lg-between">
-							<div class="col-lg-6 mb-lg-0 mb-4">
-								<div class="copyright text-center text-sm text-muted text-lg-start">
-									©
-									<script>
-										document.write(new Date().getFullYear())
-									</script>,
-																											made with
-									<i class="fa fa-heart"></i>
-									by
-									<a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
-									for a better web.
-								</div>
-							</div>
-							<div class="col-lg-6">
-								<ul class="nav nav-footer justify-content-center justify-content-lg-end">
-									{% for item in ['Creative Tim', 'About Us', 'Blog', 'License'] %}
-										<li class="nav-item">
-											<a href="https://www.creative-tim.com" class="nav-link text-muted" target="_blank">{{ item }}</a>
-										</li>
-									{% endfor %}
-								</ul>
-							</div>
-						</div>
-					</div>
-				</footer>
-			{% endblock %}
-		{% endblock %}
-	</body>
-</html>
+		</div>
+	</div>
+</footer>{% endblock %}{% endblock %}</body></html>
