--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
+
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8"/>
+		<meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+		<meta content="width=device-width, initial-scale=1" name="viewport"/>
 		<title>Planet</title>
-		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
-		<link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet">
-		<link href="{{ asset('css/global.css') }}" rel="stylesheet"> {% block pageStyle %}{% endblock %}
-		<link href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap" rel="stylesheet">
+		<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet"/>
+		<link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet"/>
+		<link href="{{ asset('css/global.css') }}" rel="stylesheet"/> {% block pageStyle %}{% endblock %}
+		<link href="https://fonts.googleapis.com/css2?family=Rajdhani&amp;display=swap" rel="stylesheet"/>
 		<script src="{{ asset('js/bootstrap.bundle.min.js') }}"></script>
-
 	</head>
 	{% block body %}
 		{% block header %}
@@ -19,21 +19,14 @@
 					<div class="row top_1">
 						<div class="col-md-3">
 							<div class="top_1l pt-1">
-								<h3 class="mb-0">
-									<a class="text-white" href="index.html.twig">
-										<i class="fa fa-video-camera col_red me-1"></i>
-										Planet</a>
-								</h3>
+								<h3 class="mb-0">{{ '{{ 'Planet'|auto_translate }}'|auto_translate }}</h3>
 							</div>
 						</div>
 						<div class="col-md-5">
 							<div class="top_1m">
 								<div class="input-group">
-									<input type="text" class="form-control bg-black" placeholder="Search Site...">
-									<span class="input-group-btn">
-										<button class="btn btn text-white bg_red rounded-0 border-0" type="button">
-											Search</button>
-									</span>
+									<input class="form-control bg-black" placeholder="Search Site..." type="text"/>
+									<span class="input-group-btn">{{ 'Search'|auto_translate }}</span>
 								</div>
 							</div>
 						</div>
@@ -41,29 +34,19 @@
 							<div class="top_1r text-end">
 								<ul class="social-network social-circle mb-0">
 									<li>
-										<a href="#" class="icoRss" title="Rss">
-											<i class="fa fa-instagram"></i>
-										</a>
+										<a class="icoRss" href="#" title="Rss"></a>
 									</li>
 									<li>
-										<a href="#" class="icoFacebook" title="Facebook">
-											<i class="fa fa-facebook"></i>
-										</a>
+										<a class="icoFacebook" href="#" title="Facebook"></a>
 									</li>
 									<li>
-										<a href="#" class="icoTwitter" title="Twitter">
-											<i class="fa fa-twitter"></i>
-										</a>
+										<a class="icoTwitter" href="#" title="Twitter"></a>
 									</li>
 									<li>
-										<a href="#" class="icoGoogle" title="Google +">
-											<i class="fa fa-youtube"></i>
-										</a>
+										<a class="icoGoogle" href="#" title="Google +"></a>
 									</li>
 									<li>
-										<a href="#" class="icoLinkedin" title="Linkedin">
-											<i class="fa fa-linkedin"></i>
-										</a>
+										<a class="icoLinkedin" href="#" title="Linkedin"></a>
 									</li>
 								</ul>
 							</div>
@@ -71,65 +54,57 @@
 					</div>
 				</div>
 			</section>
-
 			<section id="header">
 				<nav class="navbar navbar-expand-md navbar-light" id="navbar_sticky">
 					<div class="container">
-						<a class="navbar-brand text-white fw-bold" href="index.html.twig">
-							<i class="fa fa-video-camera col_red me-1"></i>
-							Planet</a>
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<a class="navbar-brand text-white fw-bold" href="index.html.twig">{{ 'Planet'|auto_translate }}</a>
+						<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
 							<span class="navbar-toggler-icon"></span>
 						</button>
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mb-0">
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="index.html.twig">Home</a>
+									<a aria-current="page" class="nav-link active" href="index.html.twig">{{ 'Home'|auto_translate }}</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="about.html.twig">About Us</a>
+									<a class="nav-link" href="about.html.twig">{{ 'About Us'|auto_translate }}</a>
 								</li>
 								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-										Blog
-									</a>
-									<ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
+									<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">{{ 'Blog'|auto_translate }}</a>
+									<ul aria-labelledby="navbarDropdown" class="dropdown-menu drop_1">
 										<li>
-											<a class="dropdown-item" href="blog.html.twig">Blog</a>
+											<a class="dropdown-item" href="blog.html.twig">{{ 'Blog'|auto_translate }}</a>
 										</li>
 										<li>
-											<a class="dropdown-item border-0" href="blog_detail.html.twig">Blog Detail</a>
+											<a class="dropdown-item border-0" href="blog_detail.html.twig">{{ 'Blog Detail'|auto_translate }}</a>
 										</li>
 									</ul>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="services.html.twig">Services</a>
+									<a class="nav-link" href="services.html.twig">{{ 'Services'|auto_translate }}</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="team.html.twig">Team</a>
+									<a class="nav-link" href="team.html.twig">{{ 'Team'|auto_translate }}</a>
 								</li>
 								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-										Pages
-									</a>
-									<ul class="dropdown-menu drop_1" aria-labelledby="navbarDropdown">
+									<a aria-expanded="false" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">{{ 'Pages'|auto_translate }}</a>
+									<ul aria-labelledby="navbarDropdown" class="dropdown-menu drop_1">
 										<li>
-											<a class="dropdown-item" href="about.html.twig">About Us</a>
+											<a class="dropdown-item" href="about.html.twig">{{ 'About Us'|auto_translate }}</a>
 										</li>
 										<li>
-											<a class="dropdown-item" href="services.html.twig">Services</a>
+											<a class="dropdown-item" href="services.html.twig">{{ 'Services'|auto_translate }}</a>
 										</li>
 										<li>
-											<a class="dropdown-item" href="team.html.twig">Team</a>
+											<a class="dropdown-item" href="team.html.twig">{{ 'Team'|auto_translate }}</a>
 										</li>
 										<li>
-											<a class="dropdown-item border-0" href="contact.html.twig">Contact</a>
+											<a class="dropdown-item border-0" href="contact.html.twig">{{ 'Contact'|auto_translate }}</a>
 										</li>
 									</ul>
 								</li>
-
 								<li class="nav-item">
-									<a class="nav-link" href="contact.html.twig">Contact Us</a>
+									<a class="nav-link" href="contact.html.twig">{{ 'Contact Us'|auto_translate }}</a>
 								</li>
 							</ul>
 						</div>
@@ -145,36 +120,23 @@
 						<div class="row footer_1">
 							<div class="col-md-4">
 								<div class="footer_1i">
-									<h3>
-										<a class="text-white" href="index.html.twig">
-											<i class="fa fa-video-camera col_red me-1"></i>
-											Planet</a>
-									</h3>
-									<p class="mt-3">Lorem ipsum dolor sit amet consect etur adi pisicing elit sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet consect etur.
-									</p>
-									<h6 class="fw-normal">
-										<i class="fa fa-map-marker fs-5 align-middle col_red me-1"></i>
-										5311 Ceaver Sidge Td.
-																																																																																																																																																																								Pakland, DE 13507</h6>
-									<h6 class="fw-normal mt-3">
-										<i class="fa fa-envelope fs-5 align-middle col_red me-1"></i>
-										info@gmail.com</h6>
-									<h6 class="fw-normal mt-3 mb-0">
-										<i class="fa fa-phone fs-5 align-middle col_red me-1"></i>
-										+123 123 456</h6>
+									<h3>{{ '{{ 'Planet'|auto_translate }}'|auto_translate }}</h3>
+									<p class="mt-3">{{ '{{ 'Lorem ipsum dolor sit amet consect etur adi pisicing elit sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet consect etur.'|auto_translate }}'|auto_translate }}</p>
+									<h6 class="fw-normal">{{ '{{ '5311 Ceaver Sidge Td.
+																																																																																																																																																																								Pakland, DE 13507'|auto_translate }}'|auto_translate }}</h6>
+									<h6 class="fw-normal mt-3">{{ '{{ 'info@gmail.com'|auto_translate }}'|auto_translate }}</h6>
+									<h6 class="fw-normal mt-3 mb-0">{{ '{{ '+123 123 456'|auto_translate }}'|auto_translate }}</h6>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="footer_1i">
-									<h4>Flickr
-										<span class="col_red">Stream</span>
-									</h4>
+									<h4>{{ '{{ 'FlickrStream'|auto_translate }}'|auto_translate }}</h4>
 									<div class="footer_1i1 row mt-4">
 										<div class="col-md-3 col-3">
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/4.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -183,7 +145,7 @@
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/5.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -192,7 +154,7 @@
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/6.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -201,7 +163,7 @@
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/7.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -212,7 +174,7 @@
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/8.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -221,7 +183,7 @@
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/9.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -230,7 +192,7 @@
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/10.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -239,7 +201,7 @@
 											<div class="footer_1i1i">
 												<div class="grid clearfix">
 													<figure class="effect-jazz mb-0">
-														<a href="#"><img src="{{ asset('img/11.jpg') }}" height="70" class="w-100" alt="abc"></a>
+														<a href="#"></a>
 													</figure>
 												</div>
 											</div>
@@ -249,42 +211,27 @@
 							</div>
 							<div class="col-md-4">
 								<div class="footer_1i">
-									<h4>Sign
-										<span class="col_red">Newsletter</span>
-									</h4>
-									<p class="mt-3">Subscribe to our newsletter list to get latest news and updates from us</p>
+									<h4>{{ '{{ 'SignNewsletter'|auto_translate }}'|auto_translate }}</h4>
+									<p class="mt-3">{{ '{{ 'Subscribe to our newsletter list to get latest news and updates from us'|auto_translate }}'|auto_translate }}</p>
 									<div class="input-group">
-										<input type="text" class="form-control bg-black" placeholder="Email">
-										<span class="input-group-btn">
-											<button class="btn btn text-white bg_red rounded-0 border-0" type="button">
-												Subscribe</button>
-										</span>
+										<input class="form-control bg-black" placeholder="Email" type="text"/>
+										<span class="input-group-btn">{{ 'Subscribe'|auto_translate }}</span>
 									</div>
 									<ul class="social-network social-circle mb-0 mt-4">
 										<li>
-											<a href="#" class="icoRss" title="Rss">
-												<i class="fa fa-instagram"></i>
-											</a>
+											<a class="icoRss" href="#" title="Rss"></a>
 										</li>
 										<li>
-											<a href="#" class="icoFacebook" title="Facebook">
-												<i class="fa fa-facebook"></i>
-											</a>
+											<a class="icoFacebook" href="#" title="Facebook"></a>
 										</li>
 										<li>
-											<a href="#" class="icoTwitter" title="Twitter">
-												<i class="fa fa-twitter"></i>
-											</a>
+											<a class="icoTwitter" href="#" title="Twitter"></a>
 										</li>
 										<li>
-											<a href="#" class="icoGoogle" title="Google +">
-												<i class="fa fa-youtube"></i>
-											</a>
+											<a class="icoGoogle" href="#" title="Google +"></a>
 										</li>
 										<li>
-											<a href="#" class="icoLinkedin" title="Linkedin">
-												<i class="fa fa-linkedin"></i>
-											</a>
+											<a class="icoLinkedin" href="#" title="Linkedin"></a>
 										</li>
 									</ul>
 								</div>
@@ -293,37 +240,34 @@
 					</div>
 				</div>
 			</section>
-
-			<section id="footer_b" class="pt-3 pb-3 bg_grey">
+			<section class="pt-3 pb-3 bg_grey" id="footer_b">
 				<div class="container">
 					<div class="row footer_1">
 						<div class="col-md-8">
 							<div class="footer_1l">
-								<p class="mb-0">© 2013 Your Website Name. All Rights Reserved | Design by
-									<a class="col_red" href="http://www.templateonweb.com">TemplateOnWeb</a>
-								</p>
+								<p class="mb-0">{{ '{{ '© 2013 Your Website Name. All Rights Reserved | Design byTemplateOnWeb'|auto_translate }}'|auto_translate }}</p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="footer_1r">
 								<ul class="mb-0">
 									<li class="d-inline-block me-2">
-										<a href="#">Home</a>
+										<a href="#">{{ 'Home'|auto_translate }}</a>
 									</li>
 									<li class="d-inline-block me-2">
-										<a href="#">Features</a>
+										<a href="#">{{ 'Features'|auto_translate }}</a>
 									</li>
 									<li class="d-inline-block me-2">
-										<a href="#">Pages</a>
+										<a href="#">{{ 'Pages'|auto_translate }}</a>
 									</li>
 									<li class="d-inline-block me-2">
-										<a href="#">Portfolio</a>
+										<a href="#">{{ 'Portfolio'|auto_translate }}</a>
 									</li>
 									<li class="d-inline-block me-2">
-										<a href="#">Blog</a>
+										<a href="#">{{ 'Blog'|auto_translate }}</a>
 									</li>
 									<li class="d-inline-block">
-										<a href="#">Contact</a>
+										<a href="#">{{ 'Contact'|auto_translate }}</a>
 									</li>
 								</ul>
 							</div>
